y.output
State 167 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_items

    2 global_items: ε
    3             | global_items global_item

    4 global_item: var_declaration
    5            | function_def

    6 type_specifier: TYPE_INT
    7               | TYPE_FLOAT
    8               | TYPE_BOOL
    9               | TYPE_STRING

   10 const_qualifier: ε
   11                | CONST

   12 var_declaration: const_qualifier type_specifier init_declarator_list ';'

   13 init_declarator_list: init_declarator
   14                     | init_declarator_list ',' init_declarator

   15 init_declarator: IDENTIFIER
   16                | IDENTIFIER '=' expression
   17                | IDENTIFIER '[' INTEGER ']'

   18 function_def: FUNCTION type_specifier IDENTIFIER '(' parameter_list ')' compound_statement
   19             | FUNCTION VOID IDENTIFIER '(' parameter_list ')' compound_statement

   20 parameter_list: ε
   21               | type_specifier IDENTIFIER
   22               | parameter_list ',' type_specifier IDENTIFIER

   23 compound_statement: '{' '}'
   24                   | '{' statement_list '}'

   25 statement_list: statement
   26               | statement_list statement

   27 statement: expression_statement
   28          | compound_statement
   29          | selection_statement
   30          | iteration_statement
   31          | jump_statement
   32          | var_declaration
   33          | io_statement

   34 expression_statement: ';'
   35                     | expression ';'

   36 selection_statement: IF '(' expression ')' statement
   37                    | IF '(' expression ')' statement ELSE statement

   38 iteration_statement: WHILE '(' expression ')' statement
   39                    | FOR '(' expression_statement expression_statement expression ')' statement

   40 jump_statement: RETURN ';'
   41               | RETURN expression ';'
   42               | BREAK ';'
   43               | CONTINUE ';'

   44 io_statement: INPUT IDENTIFIER ';'
   45             | OUTPUT expression ';'

   46 expression: assignment_expression

   47 assignment_expression: logical_expression
   48                      | lvalue '=' expression
   49                      | array_index '=' expression
   50                      | lvalue ADD_ASSIGN expression
   51                      | lvalue SUB_ASSIGN expression
   52                      | lvalue MUL_ASSIGN expression
   53                      | lvalue DIV_ASSIGN expression
   54                      | lvalue MOD_ASSIGN expression

   55 logical_expression: equality_expression
   56                   | logical_expression AND equality_expression
   57                   | logical_expression OR equality_expression

   58 equality_expression: relational_expression
   59                    | equality_expression EQ relational_expression
   60                    | equality_expression NE relational_expression

   61 relational_expression: additive_expression
   62                      | relational_expression '<' additive_expression
   63                      | relational_expression '>' additive_expression
   64                      | relational_expression LE additive_expression
   65                      | relational_expression GE additive_expression

   66 additive_expression: multiplicative_expression
   67                    | additive_expression '+' multiplicative_expression
   68                    | additive_expression '-' multiplicative_expression

   69 multiplicative_expression: unary_expression
   70                          | multiplicative_expression '*' unary_expression
   71                          | multiplicative_expression '/' unary_expression
   72                          | multiplicative_expression '%' unary_expression

   73 unary_expression: postfix_expression
   74                 | '-' unary_expression
   75                 | NOT unary_expression
   76                 | INC lvalue
   77                 | DEC lvalue

   78 postfix_expression: primary_expression
   79                   | array_index
   80                   | function_call
   81                   | lvalue INC
   82                   | lvalue DEC

   83 primary_expression: IDENTIFIER
   84                   | INTEGER
   85                   | BOOL_LITERAL
   86                   | STRING_LITERAL
   87                   | '(' expression ')'

   88 array_index: IDENTIFIER '[' expression ']'

   89 function_call: IDENTIFIER '(' ')'
   90              | IDENTIFIER '(' argument_list ')'

   91 argument_list: expression
   92              | expression ',' argument_list

   93 lvalue: IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 72
    '(' (40) 18 19 36 37 38 39 87 89 90
    ')' (41) 18 19 36 37 38 39 87 89 90
    '*' (42) 70
    '+' (43) 67
    ',' (44) 14 22 92
    '-' (45) 68 74
    '/' (47) 71
    ';' (59) 12 34 35 40 41 42 43 44 45
    '<' (60) 62
    '=' (61) 16 48 49
    '>' (62) 63
    '[' (91) 17 88
    ']' (93) 17 88
    '{' (123) 23 24
    '}' (125) 23 24
    error (256)
    IDENTIFIER <string> (258) 15 16 17 18 19 21 22 44 83 88 89 90 93
    STRING_LITERAL <string> (259) 86
    INTEGER <string> (260) 17 84
    BOOL_LITERAL <value> (261) 85
    TYPE_INT (262) 6
    TYPE_FLOAT (263) 7
    TYPE_BOOL (264) 8
    TYPE_STRING (265) 9
    CONST (266) 11
    IF (267) 36 37
    ELSE (268) 37
    WHILE (269) 38
    FOR (270) 39
    BREAK (271) 42
    CONTINUE (272) 43
    RETURN (273) 40 41
    FUNCTION (274) 18 19
    VOID (275) 19
    INPUT (276) 44
    OUTPUT (277) 45
    AND (278) 56
    OR (279) 57
    NOT (280) 75
    EQ (281) 59
    NE (282) 60
    LE (283) 64
    GE (284) 65
    INC (285) 76 81
    DEC (286) 77 82
    ADD_ASSIGN (287) 50
    SUB_ASSIGN (288) 51
    MUL_ASSIGN (289) 52
    DIV_ASSIGN (290) 53
    MOD_ASSIGN (291) 54


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    program <tac> (54)
        on left: 1
        on right: 0
    global_items <tac> (55)
        on left: 2 3
        on right: 1 3
    global_item <tac> (56)
        on left: 4 5
        on right: 3
    type_specifier <type> (57)
        on left: 6 7 8 9
        on right: 12 18 21 22
    const_qualifier <value> (58)
        on left: 10 11
        on right: 12
    var_declaration <exp> (59)
        on left: 12
        on right: 4 32
    init_declarator_list <exp> (60)
        on left: 13 14
        on right: 12 14
    init_declarator <exp> (61)
        on left: 15 16 17
        on right: 13 14
    function_def <tac> (62)
        on left: 18 19
        on right: 5
    parameter_list <tac> (63)
        on left: 20 21 22
        on right: 18 19 22
    compound_statement <tac> (64)
        on left: 23 24
        on right: 18 19 28
    statement_list <tac> (65)
        on left: 25 26
        on right: 24 26
    statement <tac> (66)
        on left: 27 28 29 30 31 32 33
        on right: 25 26 36 37 38 39
    expression_statement <exp> (67)
        on left: 34 35
        on right: 27 39
    selection_statement <tac> (68)
        on left: 36 37
        on right: 29
    iteration_statement <tac> (69)
        on left: 38 39
        on right: 30
    jump_statement <tac> (70)
        on left: 40 41 42 43
        on right: 31
    io_statement <tac> (71)
        on left: 44 45
        on right: 33
    expression <exp> (72)
        on left: 46
        on right: 16 35 36 37 38 39 41 45 48 49 50 51 52 53 54 87 88 91 92
    assignment_expression <exp> (73)
        on left: 47 48 49 50 51 52 53 54
        on right: 46
    logical_expression <exp> (74)
        on left: 55 56 57
        on right: 47 56 57
    equality_expression <exp> (75)
        on left: 58 59 60
        on right: 55 56 57 59 60
    relational_expression <exp> (76)
        on left: 61 62 63 64 65
        on right: 58 59 60 62 63 64 65
    additive_expression <exp> (77)
        on left: 66 67 68
        on right: 61 62 63 64 65 67 68
    multiplicative_expression <exp> (78)
        on left: 69 70 71 72
        on right: 66 67 68 70 71 72
    unary_expression <exp> (79)
        on left: 73 74 75 76 77
        on right: 69 70 71 72 74 75
    postfix_expression <exp> (80)
        on left: 78 79 80 81 82
        on right: 73
    primary_expression <exp> (81)
        on left: 83 84 85 86 87
        on right: 78
    array_index <exp> (82)
        on left: 88
        on right: 49 79
    function_call <exp> (83)
        on left: 89 90
        on right: 80
    argument_list <exp> (84)
        on left: 91 92
        on right: 90 92
    lvalue <sym> (85)
        on left: 93
        on right: 48 50 51 52 53 54 76 77 81 82


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (global_items)

    program       go to state 1
    global_items  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: global_items •
    3 global_items: global_items • global_item

    CONST     shift, and go to state 4
    FUNCTION  shift, and go to state 5

    $end      reduce using rule 1 (program)
    $default  reduce using rule 10 (const_qualifier)

    global_item      go to state 6
    const_qualifier  go to state 7
    var_declaration  go to state 8
    function_def     go to state 9


State 3

    0 $accept: program $end •

    $default  accept


State 4

   11 const_qualifier: CONST •

    $default  reduce using rule 11 (const_qualifier)


State 5

   18 function_def: FUNCTION • type_specifier IDENTIFIER '(' parameter_list ')' compound_statement
   19             | FUNCTION • VOID IDENTIFIER '(' parameter_list ')' compound_statement

    TYPE_INT     shift, and go to state 10
    TYPE_FLOAT   shift, and go to state 11
    TYPE_BOOL    shift, and go to state 12
    TYPE_STRING  shift, and go to state 13
    VOID         shift, and go to state 14

    type_specifier  go to state 15


State 6

    3 global_items: global_items global_item •

    $default  reduce using rule 3 (global_items)


State 7

   12 var_declaration: const_qualifier • type_specifier init_declarator_list ';'

    TYPE_INT     shift, and go to state 10
    TYPE_FLOAT   shift, and go to state 11
    TYPE_BOOL    shift, and go to state 12
    TYPE_STRING  shift, and go to state 13

    type_specifier  go to state 16


State 8

    4 global_item: var_declaration •

    $default  reduce using rule 4 (global_item)


State 9

    5 global_item: function_def •

    $default  reduce using rule 5 (global_item)


State 10

    6 type_specifier: TYPE_INT •

    $default  reduce using rule 6 (type_specifier)


State 11

    7 type_specifier: TYPE_FLOAT •

    $default  reduce using rule 7 (type_specifier)


State 12

    8 type_specifier: TYPE_BOOL •

    $default  reduce using rule 8 (type_specifier)


State 13

    9 type_specifier: TYPE_STRING •

    $default  reduce using rule 9 (type_specifier)


State 14

   19 function_def: FUNCTION VOID • IDENTIFIER '(' parameter_list ')' compound_statement

    IDENTIFIER  shift, and go to state 17


State 15

   18 function_def: FUNCTION type_specifier • IDENTIFIER '(' parameter_list ')' compound_statement

    IDENTIFIER  shift, and go to state 18


State 16

   12 var_declaration: const_qualifier type_specifier • init_declarator_list ';'

    IDENTIFIER  shift, and go to state 19

    init_declarator_list  go to state 20
    init_declarator       go to state 21


State 17

   19 function_def: FUNCTION VOID IDENTIFIER • '(' parameter_list ')' compound_statement

    '('  shift, and go to state 22


State 18

   18 function_def: FUNCTION type_specifier IDENTIFIER • '(' parameter_list ')' compound_statement

    '('  shift, and go to state 23


State 19

   15 init_declarator: IDENTIFIER •
   16                | IDENTIFIER • '=' expression
   17                | IDENTIFIER • '[' INTEGER ']'

    '='  shift, and go to state 24
    '['  shift, and go to state 25

    $default  reduce using rule 15 (init_declarator)


State 20

   12 var_declaration: const_qualifier type_specifier init_declarator_list • ';'
   14 init_declarator_list: init_declarator_list • ',' init_declarator

    ';'  shift, and go to state 26
    ','  shift, and go to state 27


State 21

   13 init_declarator_list: init_declarator •

    $default  reduce using rule 13 (init_declarator_list)


State 22

   19 function_def: FUNCTION VOID IDENTIFIER '(' • parameter_list ')' compound_statement

    TYPE_INT     shift, and go to state 10
    TYPE_FLOAT   shift, and go to state 11
    TYPE_BOOL    shift, and go to state 12
    TYPE_STRING  shift, and go to state 13

    $default  reduce using rule 20 (parameter_list)

    type_specifier  go to state 28
    parameter_list  go to state 29


State 23

   18 function_def: FUNCTION type_specifier IDENTIFIER '(' • parameter_list ')' compound_statement

    TYPE_INT     shift, and go to state 10
    TYPE_FLOAT   shift, and go to state 11
    TYPE_BOOL    shift, and go to state 12
    TYPE_STRING  shift, and go to state 13

    $default  reduce using rule 20 (parameter_list)

    type_specifier  go to state 28
    parameter_list  go to state 30


State 24

   16 init_declarator: IDENTIFIER '=' • expression

    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INTEGER         shift, and go to state 33
    BOOL_LITERAL    shift, and go to state 34
    NOT             shift, and go to state 35
    INC             shift, and go to state 36
    DEC             shift, and go to state 37
    '-'             shift, and go to state 38
    '('             shift, and go to state 39

    expression                 go to state 40
    assignment_expression      go to state 41
    logical_expression         go to state 42
    equality_expression        go to state 43
    relational_expression      go to state 44
    additive_expression        go to state 45
    multiplicative_expression  go to state 46
    unary_expression           go to state 47
    postfix_expression         go to state 48
    primary_expression         go to state 49
    array_index                go to state 50
    function_call              go to state 51
    lvalue                     go to state 52


State 25

   17 init_declarator: IDENTIFIER '[' • INTEGER ']'

    INTEGER  shift, and go to state 53


State 26

   12 var_declaration: const_qualifier type_specifier init_declarator_list ';' •

    $default  reduce using rule 12 (var_declaration)


State 27

   14 init_declarator_list: init_declarator_list ',' • init_declarator

    IDENTIFIER  shift, and go to state 19

    init_declarator  go to state 54


State 28

   21 parameter_list: type_specifier • IDENTIFIER

    IDENTIFIER  shift, and go to state 55


State 29

   19 function_def: FUNCTION VOID IDENTIFIER '(' parameter_list • ')' compound_statement
   22 parameter_list: parameter_list • ',' type_specifier IDENTIFIER

    ','  shift, and go to state 56
    ')'  shift, and go to state 57


State 30

   18 function_def: FUNCTION type_specifier IDENTIFIER '(' parameter_list • ')' compound_statement
   22 parameter_list: parameter_list • ',' type_specifier IDENTIFIER

    ','  shift, and go to state 56
    ')'  shift, and go to state 58


State 31

   83 primary_expression: IDENTIFIER •
   88 array_index: IDENTIFIER • '[' expression ']'
   89 function_call: IDENTIFIER • '(' ')'
   90              | IDENTIFIER • '(' argument_list ')'
   93 lvalue: IDENTIFIER •

    '['  shift, and go to state 59
    '('  shift, and go to state 60

    INC         reduce using rule 93 (lvalue)
    DEC         reduce using rule 93 (lvalue)
    ADD_ASSIGN  reduce using rule 93 (lvalue)
    SUB_ASSIGN  reduce using rule 93 (lvalue)
    MUL_ASSIGN  reduce using rule 93 (lvalue)
    DIV_ASSIGN  reduce using rule 93 (lvalue)
    MOD_ASSIGN  reduce using rule 93 (lvalue)
    '='         reduce using rule 93 (lvalue)
    $default    reduce using rule 83 (primary_expression)


State 32

   86 primary_expression: STRING_LITERAL •

    $default  reduce using rule 86 (primary_expression)


State 33

   84 primary_expression: INTEGER •

    $default  reduce using rule 84 (primary_expression)


State 34

   85 primary_expression: BOOL_LITERAL •

    $default  reduce using rule 85 (primary_expression)


State 35

   75 unary_expression: NOT • unary_expression

    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INTEGER         shift, and go to state 33
    BOOL_LITERAL    shift, and go to state 34
    NOT             shift, and go to state 35
    INC             shift, and go to state 36
    DEC             shift, and go to state 37
    '-'             shift, and go to state 38
    '('             shift, and go to state 39

    unary_expression    go to state 61
    postfix_expression  go to state 48
    primary_expression  go to state 49
    array_index         go to state 62
    function_call       go to state 51
    lvalue              go to state 63


State 36

   76 unary_expression: INC • lvalue

    IDENTIFIER  shift, and go to state 64

    lvalue  go to state 65


State 37

   77 unary_expression: DEC • lvalue

    IDENTIFIER  shift, and go to state 64

    lvalue  go to state 66


State 38

   74 unary_expression: '-' • unary_expression

    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INTEGER         shift, and go to state 33
    BOOL_LITERAL    shift, and go to state 34
    NOT             shift, and go to state 35
    INC             shift, and go to state 36
    DEC             shift, and go to state 37
    '-'             shift, and go to state 38
    '('             shift, and go to state 39

    unary_expression    go to state 67
    postfix_expression  go to state 48
    primary_expression  go to state 49
    array_index         go to state 62
    function_call       go to state 51
    lvalue              go to state 63


State 39

   87 primary_expression: '(' • expression ')'

    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INTEGER         shift, and go to state 33
    BOOL_LITERAL    shift, and go to state 34
    NOT             shift, and go to state 35
    INC             shift, and go to state 36
    DEC             shift, and go to state 37
    '-'             shift, and go to state 38
    '('             shift, and go to state 39

    expression                 go to state 68
    assignment_expression      go to state 41
    logical_expression         go to state 42
    equality_expression        go to state 43
    relational_expression      go to state 44
    additive_expression        go to state 45
    multiplicative_expression  go to state 46
    unary_expression           go to state 47
    postfix_expression         go to state 48
    primary_expression         go to state 49
    array_index                go to state 50
    function_call              go to state 51
    lvalue                     go to state 52


State 40

   16 init_declarator: IDENTIFIER '=' expression •

    $default  reduce using rule 16 (init_declarator)


State 41

   46 expression: assignment_expression •

    $default  reduce using rule 46 (expression)


State 42

   47 assignment_expression: logical_expression •
   56 logical_expression: logical_expression • AND equality_expression
   57                   | logical_expression • OR equality_expression

    AND  shift, and go to state 69
    OR   shift, and go to state 70

    $default  reduce using rule 47 (assignment_expression)


State 43

   55 logical_expression: equality_expression •
   59 equality_expression: equality_expression • EQ relational_expression
   60                    | equality_expression • NE relational_expression

    EQ  shift, and go to state 71
    NE  shift, and go to state 72

    $default  reduce using rule 55 (logical_expression)


State 44

   58 equality_expression: relational_expression •
   62 relational_expression: relational_expression • '<' additive_expression
   63                      | relational_expression • '>' additive_expression
   64                      | relational_expression • LE additive_expression
   65                      | relational_expression • GE additive_expression

    LE   shift, and go to state 73
    GE   shift, and go to state 74
    '<'  shift, and go to state 75
    '>'  shift, and go to state 76

    $default  reduce using rule 58 (equality_expression)


State 45

   61 relational_expression: additive_expression •
   67 additive_expression: additive_expression • '+' multiplicative_expression
   68                    | additive_expression • '-' multiplicative_expression

    '+'  shift, and go to state 77
    '-'  shift, and go to state 78

    $default  reduce using rule 61 (relational_expression)


State 46

   66 additive_expression: multiplicative_expression •
   70 multiplicative_expression: multiplicative_expression • '*' unary_expression
   71                          | multiplicative_expression • '/' unary_expression
   72                          | multiplicative_expression • '%' unary_expression

    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '%'  shift, and go to state 81

    $default  reduce using rule 66 (additive_expression)


State 47

   69 multiplicative_expression: unary_expression •

    $default  reduce using rule 69 (multiplicative_expression)


State 48

   73 unary_expression: postfix_expression •

    $default  reduce using rule 73 (unary_expression)


State 49

   78 postfix_expression: primary_expression •

    $default  reduce using rule 78 (postfix_expression)


State 50

   49 assignment_expression: array_index • '=' expression
   79 postfix_expression: array_index •

    '='  shift, and go to state 82

    $default  reduce using rule 79 (postfix_expression)


State 51

   80 postfix_expression: function_call •

    $default  reduce using rule 80 (postfix_expression)


State 52

   48 assignment_expression: lvalue • '=' expression
   50                      | lvalue • ADD_ASSIGN expression
   51                      | lvalue • SUB_ASSIGN expression
   52                      | lvalue • MUL_ASSIGN expression
   53                      | lvalue • DIV_ASSIGN expression
   54                      | lvalue • MOD_ASSIGN expression
   81 postfix_expression: lvalue • INC
   82                   | lvalue • DEC

    INC         shift, and go to state 83
    DEC         shift, and go to state 84
    ADD_ASSIGN  shift, and go to state 85
    SUB_ASSIGN  shift, and go to state 86
    MUL_ASSIGN  shift, and go to state 87
    DIV_ASSIGN  shift, and go to state 88
    MOD_ASSIGN  shift, and go to state 89
    '='         shift, and go to state 90


State 53

   17 init_declarator: IDENTIFIER '[' INTEGER • ']'

    ']'  shift, and go to state 91


State 54

   14 init_declarator_list: init_declarator_list ',' init_declarator •

    $default  reduce using rule 14 (init_declarator_list)


State 55

   21 parameter_list: type_specifier IDENTIFIER •

    $default  reduce using rule 21 (parameter_list)


State 56

   22 parameter_list: parameter_list ',' • type_specifier IDENTIFIER
